# pisignage-server

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLAN.md  README.md  docker-compose.prod.yml  package-lock.json  package.json  server.js
.claude/: CLAUDE.md
.github/workflows/: main.yml
app/controllers/: assets.js  groups.js  labels.js  licenses.js  overlay.js  playlists.js  rss-feed.js  scheduler.js  server-assets.js  server-main.js  server-socket-new.js  server-socket-ws.js  server-socket.js
app/models/: assets.js  group.js  label.js  player.js  settings.js
app/others/: file-util.js  restware.js  system-check.js
config/: config.js  express.js  routes.js
config/env/: all.js  development.js  production.js  test.js
kiosk/: README.md  pyproject.toml  tsv6-pisignage-kiosk.service
kiosk/tests/: conftest.py  test_kiosk.py  test_overlay_manager.py  test_pisignage_client.py
kiosk/tsv6_pisignage/: __init__.py  __main__.py  kiosk.py  overlay_manager.py  pisignage_client.py
nginx/: pisignage.conf
public/app/js/: pi-config.js
public/app/js/controllers/: groups.js
public/app/partials/: players.pug
public/app/templates/: overlay-popup.html
public/overlay/: custom_layout_overlay.html  overlay-client.js  overlay.css
public/overlay/assets/: README.md
scripts/: backup-mongo.sh  deploy-hostinger.sh
